# otrium_price_predictions

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: github_registry.yml
assessment/: test_api.py
assessment/predictions_data/: predictions.csv
src/otrium_model/: app.py  main.py
src/otrium_model/docs/: tags.py
src/otrium_model/logger/: root_logger.py
src/otrium_model/models/: load_model.py
src/otrium_model/routers/: predictor.py
tests/: test_app.py
