[metadata]
name = otrium_model
description = Prediction model for Otrium sales data
author = Kimberley Boersma
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
include_package_data = True
packages = find:

install_requires =
    fastapi>=0.70.0
    uvicorn>=0.15.0
    pandas>=1.3.2
    click>=8.0.3
    scikit-learn>=1.0.1

python_requires = >=3.9,<3.10
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    tox-gh-actions>=2.8.1

[options.package_data]
meetup = py.typed

[options.packages.find]
where=src

[flake8]
max-line-length = 160
ignore = E302, E402